pro-grafana/ingress-prom.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: prometheus.ludovic.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
               name: monitoring-kube-prometheus-prometheus
               port: 
                 number: 9090
